refactor: pulizia del controller, serviceimpl e inserzione map per migliorare la struttura e la qualità del codice